# ivanildobarauna.dev

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  Dockerfile  Dockerfile.new  README.md  REDESIGN_SUMMARY.md  SECURITY.md  TESTING_REDESIGN.md  docker-compose.local.yaml  docker-compose.production.yaml  docker-compose.rollback.yaml  docker-compose.yaml  entrypoint.sh  main.py  mdsoandsadsa  nginx.conf  package-lock.json  package.json  setup.sh  tailwind.config.ts  test
backend/: .cursorrules  .dockerignore  .windsurfrules  Dockerfile  README.md  pyproject.toml
backend/.cursor/rules/: domain-dto.mdc  estrutura-projeto.mdc  infrastructure-routes.mdc
backend/.github/workflows/: packages-deploy.yml  release.yml  tests.yml
backend/app/: __main__.py  main.py
backend/app/admin/: model_visualization.py  setup.py
backend/assets/: education.json  experiences.json  projects.json  social_media.json
backend/docs/: index.html  swagger.json
backend/migrations/: all.sql  certifications.sql  experiences.sql  formations.sql  projects.sql  social_media.sql
backend/src/domain/dto/: certification.py  company.py  company_duration.py  experience.py  formation.py  project.py  social_media.py
backend/src/infrastructure/: api.db  application_dependencies.py  dependencie_injection.py
backend/src/infrastructure/adapters/: outbound_file_storage_adapter.py  outbound_postgres_adapter.py  outbound_redis_adapter.py  outbound_sql_lite_adapter.py
backend/src/infrastructure/ports/: cache_provider_interface.py  repository_interface.py
backend/src/infrastructure/services/: portfolio_data_service.py
backend/tests/: conftest.py
frontend/: .dockerignore  (+15 more)
(+153 files in other folders)
